# ml_template

./: README.md  pyproject.toml  requirements.txt  requirements_dev.txt  template.py
.github/workflows/: ci.yml  docs.yml
