[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "<REPO_NAME>"
version = "0.0.1"
description = "<COMMAND_NAME> is a Python-based command-line interface (CLI) utility."
authors = [
    {name = "<GITHUB_USER_NAME>", email = "<AUTHOR_EMAIL>"},
]
dependencies = ["requests==2.28.2"]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "<LICENCSE_NAME>"}
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
[options]
package_dir = "src"


[project.optional-dependencies]
testing = [
    "black>=22.8.0",
    "flake8>=5.0.4",
    "mypy>=0.971",
    "pytest>=7.1.3",
    "tox>=3.25.1",
]
[project.scripts]
<PACKAGE_NAME> = "<COMMAND_NAME>.cli:main"

[project.urls]
"Bug Tracker" = "https://github.com/<GITHUB_USER_NAME>/<REPO_NAME>/issues"
"Documentation" = "https://<GITHUB_USER_NAME>.github.io/<REPO_NAME>/"
"Source" = "https://github.com/<GITHUB_USER_NAME>/<REPO_NAME>"

[tool.pytest.ini_options]
testpaths = [
    "tests"
    ]

[tool.mypy]
mypy_path = "src"
ignore_missing_imports = true

[tool.flake8]
max-line-length = 160
exclude = "__init__.py"
